--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.5.2",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
     "expo": "37.0.11",
+    "expo-camera": "^8.3.1",
+    "expo-image-picker": "^8.3.0",
+    "expo-location": "^8.2.1",
+    "immer": "^7.0.5",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-web": "0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0"
+    "@babel/core": "7.9.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "prettier": "^2.0.5",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "expo start",
