--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "expo": "37.0.11",
-    "expo-camera": "^8.3.1",
-    "expo-image-picker": "^8.3.0",
-    "expo-location": "^8.2.1",
+    "expo-camera": "~8.2.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-location": "~8.1.0",
+    "formik": "^2.1.4",
     "immer": "^7.0.5",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -20,7 +21,8 @@
     "react-native-web": "0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
